--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "async": "^1.5.0",
     "chalk": "0.5.1",
     "debug": "^2.1.1",
+    "inquirer": "^0.11.0",
     "progress": "1.1.8",
     "request": "^2.55.0",
     "tar": "1.0.3",
