--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "chalk": "0.5.1",
     "debug": "^2.1.1",
     "progress": "1.1.8",
-    "request": "^2.55.0",
+    "request": "2.69.0",
     "tar": "1.0.3",
     "which": "1.0.8",
     "semver": "~3.0.1",
